<resources>
    <string name="banner_ad_learn">ca-app-pub-8279701606777726/9191953898</string>
    <string name="banner_ad_other">ca-app-pub-8279701606777726/7715220695</string>
    <string name="app_name">Conjugation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="yo">Yo: </string>
    <string name="tu">Tú: </string>
    <string name="el">El/ella/usted:</string>
    <string name="nos">Nosotros: </string>
    <string name="os">Vosotros: </string>
    <string name="ellos">Ellos/ellas/ustedes: </string>
    <string-array name="conjugation_types">
        <item>Present Tense</item>
        
        <item>Preterite Tense</item>
        
        <item>Imperfect Tense</item>
        
        <item>Future Tense</item>
        
        <item>Affirmative Command</item>
        
        <item>Negative Command</item>
        
        <item>Present Subjunctive Tense</item>
        
        <item>Imperfect Subjunctive Tense</item>
        
        <item>Conditional Tense</item>
        
    </string-array>
    <string-array name="perfect_conjugation_types">
        <item>Present Perfect Tense</item>
        <item>Past Perfect Tense</item>
        <item>Future Perfect Tense</item>
        <item>Present Perfect Subjunctive</item>
        <item>Past Perfect Subjunctive</item>
        <item>Conditional Perfect Tense</item>
    </string-array>
    <string-array name="all_tenses">
        <item>Present Tense</item>
        
        <item>Preterite Tense</item>
        
        <item>Imperfect Tense</item>
        
        <item>Future Tense</item>
        
        <item>Imperative Tense</item>
        
        <item>Present Subjunctive Tense</item>
        
        <item>Imperfect Subjunctive Tense</item>
        
        <item>Conditional Tense</item>
        
        <item>Present Perfect Tense</item>
        
        <item>Past Perfect Tense</item>
        
        <item>Future Perfect Tense</item>
        
        <item>Present Perfect Subjunctive</item>
        
        <item>Past Perfect Subjunctive</item>
        
        <item>Past Participle</item>
        
        <item>Gerund</item>
        
    </string-array>
    <string name="dialog_title">Thank You!</string>
</resources>