<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <EditText
        android:id="@+id/mainTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:hint="Write the infinitive here!" />

    <TextView
        android:id="@+id/yoLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yo"
        android:textSize="20dp"
        android:layout_below="@+id/mainTextField"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/yoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" ..."
        android:textSize="20dp"
        android:layout_below="@+id/mainTextField"
        android:layout_toRightOf="@+id/yoLabelTextView"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tuLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tu"
        android:textSize="20dp"
        android:layout_below="@+id/yoLabelTextView"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tuTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" ..."
        android:textSize="20dp"
        android:layout_below="@+id/yoLabelTextView"
        android:layout_toRightOf="@+id/tuLabelTextView"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/elLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/el"
        android:textSize="20dp"
        android:layout_below="@+id/tuLabelTextView"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/elTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" ..."
        android:textSize="20dp"
        android:layout_below="@+id/tuLabelTextView"
        android:layout_toRightOf="@+id/elLabelTextView"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/nosLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nos"
        android:textSize="20dp"
        android:layout_below="@+id/elLabelTextView"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/nosTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" ..."
        android:textSize="20dp"
        android:layout_below="@+id/elLabelTextView"
        android:layout_toRightOf="@+id/nosLabelTextView"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/osLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/os"
        android:textSize="20dp"
        android:layout_below="@+id/nosLabelTextView"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/osTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" ..."
        android:textSize="20dp"
        android:layout_below="@+id/nosLabelTextView"
        android:layout_toRightOf="@+id/osLabelTextView"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/ellosLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ellos"
        android:textSize="20dp"
        android:layout_below="@+id/osLabelTextView"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/ellosTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" ..."
        android:textSize="20dp"
        android:layout_below="@+id/osLabelTextView"
        android:layout_toRightOf="@+id/ellosLabelTextView"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/conjugateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Conjugate!"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
